[package]
name = "anti-pacman"
version = "0.1.0"
edition = "2024"
description = "Template for starting a Yew project using Trunk"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
rand = { version="0.9.1" }
getrandom = { version = "0.3", features = ["wasm_js"] }
yew = { version="0.21", features=["csr"] }
wasm-logger = "0.2.0"
log = "0.4.27"
web-sys = "0.3.77"

[lints.rust]
unused_assignments = "allow"
unused_imports = "allow"
unused_variables = "allow"
dead_code = "allow"
