[package]
name = "anti-pacman"
version = "0.1.0"
edition = "2024"
description = "Pacman, but you're the ghost chasing the muncher"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

[dependencies]
rand = { version = "0.9.1" }
getrandom = { version = "0.3", features = ["wasm_js"] }
yew = { version = "0.21", features = ["csr"] }
wasm-logger = "0.2.0"
log = "0.4.27"
web-sys = "0.3.77"

[lints.rust]
unused_assignments = "allow"
unused_imports = "allow"
dead_code = "allow"
